force-app/main/default/objects/FHIR_JWT_SETTINGS__mdt/FHIR_JWT_SETTINGS__mdt.object-meta.xml
<CustomObject>
    <label>FHIR_jwt_setting</label>
    <pluralLabel>FHIR_jwt_settings</pluralLabel>
</CustomObject>