force-app/main/default/objects/FHIR_JWT_SETTINGS__mdt/fields/AUD__c.field-meta.xml
<CustomField>
    <fullName>AUD__c</fullName>
    <description>The FHIR authorization server&apos;s token endpoint URL. This is the same URL to which this authentication JWT will be posted. See below for an example POST.</description>
    <inlineHelpText>The FHIR authorization server&apos;s token endpoint URL. This is the same URL to which this authentication JWT will be posted. See below for an example POST.</inlineHelpText>
    <label>AUD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>