force-app/main/default/objects/FHIR_JWT_SETTINGS__mdt/fields/Cert_Name__c.field-meta.xml
<CustomField>
    <fullName>Cert_Name__c</fullName>
    <description>Text name of the cert you want to use to sign the JWT.  Needs to be in the Certs settings.</description>
    <inlineHelpText>Text name of the cert you want to use to sign the JWT.  Needs to be in the Certs settings.</inlineHelpText>
    <label>Cert Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>