force-app/main/default/objects/FHIR_JWT_SETTINGS__mdt/fields/ISS__c.field-meta.xml
<CustomField>
    <fullName>ISS__c</fullName>
    <description>Issuer of the JWT. This is the app&apos;s client_id, as determined during registration on the Epic on FHIR website.</description>
    <inlineHelpText>Issuer of the JWT. This is the app&apos;s client_id, as determined during registration on the Epic on FHIR website.</inlineHelpText>
    <label>ISS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>