force-app/main/default/objects/FHIR_JWT_SETTINGS__mdt/fields/JTI__c.field-meta.xml
<CustomField>
    <fullName>JTI__c</fullName>
    <description>A unique identifier for the JWT.</description>
    <inlineHelpText>A unique identifier for the JWT.</inlineHelpText>
    <label>JTI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>