force-app/main/default/objects/FHIR_JWT_SETTINGS__mdt/fields/SUB__c.field-meta.xml
<CustomField>
    <fullName>SUB__c</fullName>
    <description>The service&apos;s client_id, as determined during registration on the Epic on FHIR website.</description>
    <inlineHelpText>The service&apos;s client_id, as determined during registration on the Epic on FHIR website.</inlineHelpText>
    <label>SUB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>